Fix: ANT-4663 - Hydro > generation : filter areas when specific area and other